
   - Renable C Zope security policy by implementing recent Python
     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8


  after Zope 2.8b1

    Features added

      - Made WebDAV server distinguishable from the default HTTP
        server both in the ZMI and in event.log.

      - Included BTreeFolder2

    Bugs fixed

      - Collector #1815: ZCTextIndex accepts (again) sequences of strings to 
        be indexed.

      - Collector #1812: Fixed key error in ZSQL ZMI/Test

      - Fixed CMFBTreeFolder for CMF 1.5+

      - Collector #1808: manage_convertIndexes no longer tries to change the
        index types causing some trouble with CMF.

      - manage_convertIndexes now handles DateRangeIndexes and PathIndexes properly

      - WebDAV COPY and MOVE did not call '_notifyOfCopyTo' and
        '_postCopy' hooks like it was done in
        OFS.CopySupport. Additionally added
        'manage_changeOwnershipType' to make MOVE behave even closer
        to OFS.CopySupport.

      - Collector #1548: Fix 'httplib' usage in ZPublisher.Client.

      - Collector #1792: applied patch for broken ZClasses

      - Collector #1803: Fixed InitializeClass for some corner case.

      - Collector #1798, issue1: ZopeTestCase no longer tries to 
        install products that was installed by Zope during startup.
	      
      - Collector #1323: applied patch to fix umask problem in zdctl

      - Collector #1781: made 'create_mount_points' ZConfig option actually
        work (thanks to Dieter Maurer for the patch).

      - Collector #1780: DateTime.strftime() now handles dates <= 1900 or
        >= 2038

      - Collector #1775: turning off debug mode by default
